--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,31 +1,383 @@
 <?xml version="1.0"?><!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
- <match target="font" >
+   
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>xxxNOTHINGxxx</string>
+    </test>
+    <edit mode="assign" name="hinting" >
+        <bool>true</bool>
+    </edit>
+    <edit mode="assign" name="autohint" >
+        <bool>true</bool>
+    </edit>
+    <edit mode="assign" name="antialias" >
+        <bool>true</bool>
+    </edit>
+    <edit mode="assign" name="hintstyle" >
+        <const>hintfull</const>
+    </edit>
+</match>
+
+<alias binding="same">
+     <family>System</family>
+     <accept>
+         <family>Segoe UI</family>
+     </accept>
+ </alias>
+ <alias binding="same">
+     <family>MS Shell Dlg</family>
+     <accept>
+         <family>Segoe UI</family>
+     </accept>
+ </alias>
+ <alias binding="same">
+     <family>MS Sans Serif</family>
+     <accept>
+         <family>Segoe UI</family>
+     </accept>
+ </alias>
+
+<match target="font" >
+    <edit name="embeddedbitmap" mode="assign">
+        <bool>false</bool>
+    </edit>
+</match>
+
+<!-- Reject bitmap fonts in favour of Truetype, Postscript, etc. -->
+<selectfont>
+    <rejectfont>
+        <pattern>
+            <patelt name="scalable" >
+                <bool>false</bool>
+            </patelt>
+        </pattern>
+    </rejectfont>
+</selectfont>
+
+<!-- substitute truetype fonts for bitmap ones -->
+<match target="pattern" >
+    <edit name="prefer_outline" >
+        <bool>true</bool>
+    </edit>
+</match>	
+
+<!-- These slight hinted fonts should use full hinting above 17 px -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Arial Black</string>		
+    </test>
+    <test compare="more" name="pixelsize" qual="any" >
+        <double>17</double>
+    </test>
+    <edit mode="assign" name="hintstyle" >
+        <const>hintfull</const>
+    </edit>
+    <edit mode="assign" name="autohint" >
+        <bool>false</bool>
+    </edit>
+</match>	
+
+<!-- These full hinted fonts should use slight hinting below 14 px -->
+
+<!-- Force marked fonts to have artificial oblique -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Aquabase</string>	
+        <string>Browallia New</string>
+        <string>BrowalliaUPC</string>
+    </test>
+    <test compare="less" name="pixelsize" qual="any" >
+        <double>14</double>
+    </test>
+    <edit mode="assign" name="hintstyle" >
+        <const>hintslight</const>
+    </edit>
+    <edit mode="assign" name="autohint" >
+        <bool>false</bool>
+    </edit>
+</match>		
+
+<!-- Make these fonts use no antialiasing or hinting -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>ProFontWindows</string>
+        <string>Terminus</string>
+    </test>
+    <edit mode="assign" name="hintstyle" >
+        <const>hintnone</const>
+    </edit>
+    <edit mode="assign" name="antialias" >
+        <bool>false</bool>
+    </edit>
+    <edit mode="assign" name="hinting" >
+        <bool>false</bool>
+    </edit>
+</match>
+
+<!--{{{Replacments-->
+
+<!-- ********************  REPLACEMENTS  **********************  -->
+
+<alias>
+    <family>sans</family>
+    <default>
+        <family>Arial</family>
+    </default>
+</alias>
+
+<alias>
+    <family>sans-serif</family>
+    <default>
+        <family>Arial</family>
+    </default>
+</alias>
+
+<alias>
+    <family>Helvetica Neue</family>
+    <default>
+        <family>Arial</family>
+    </default>
+</alias>
+
+<!-- Replaces 'sans' with a specific font preference -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>sans</string>
+        
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>	
+
+<!-- Replaces 'sans-serif' with a specific font preference -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>sans-serif</string>
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>
+
+<!-- Replaces 'serif' with a specific font preference -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>serif</string>
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Times New Roman</string>
+    </edit>
+</match>	
+
+<!-- Replaces these turds with Arial -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Nimbus Sans</string>				
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Nimbus Sans L</string>				
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Geneva</string>				
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>
+<match target="font" >
+    <test name="family" qual="any" >
+        <family>Helvetica</family>
+        <string>Helvetica Neue</string>				
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>
+
+<!-- Replaces these turds with Arial -->
+<match target="pattern" name="family">
+    <test name="family" qual="any" >
+        <string>Helvetica</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>
+<match target="pattern" name="family">
+    <test name="family" qual="any" >
+        <string>Nimbus Sans</string>				
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>	
+<match target="pattern" name="family">
+    <test name="family" qual="any" >
+        <string>Nimbus Sans L</string>				
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>	
+<match target="pattern" name="family">
+    <test name="family" qual="any" >
+        <string>Geneva</string>				
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>	
+<match target="pattern" name="family">
+    <test name="family" qual="any" >
+        <string>Helvetica Neue</string>				
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Arial</string>
+    </edit>
+</match>	
+
+
+
+<!-- Replaces Palatino with Palatino Linotype -->
+<match target="pattern" name="family" >
+    <test name="family" qual="any" >
+        <string>Palatino</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Palatino Linotype</string>
+    </edit>
+</match>
+
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Palatino</string>
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Palatino Linotype</string>
+    </edit>
+</match>	
+
+
+<!-- Replaces 'Times' with Times New Roman -->
+<match target="pattern" name="family" >
+    <test name="family" qual="any" >
+        <string>Times</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Times New Roman</string>
+    </edit>
+</match>	
+
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Times</string>
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Times New Roman</string>
+    </edit>
+</match>
+
+<!-- Replaces 'Nimbus Mono L' with Courier New -->
+<match target="font" >
+    <test name="family" qual="any" >
+        <string>Nimbus Mono L</string>
+        <string>Courier</string>
+    </test>
+    <edit mode="assign" name="family" >
+        <string>Courier New</string>
+    </edit>
+</match>
+
+<match target="pattern" name="family" >
+    <test name="family" compare="eq" target="default">
+        <string>Nimbus Mono L</string>
+        <string>Courier</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family" >
+        <string>Courier New</string>
+    </edit>
+</match>	
+
+<match target="pattern">
+    <test name="family" compare="eq" target="default">
+        <string>Courier</string>
+    </test>
+    <edit name="family" mode="prepend" binding="same">
+        <string>Courier New</string>
+    </edit>
+</match>
+
+<!-- Replace "Arial" with black weight, with font "Arial Black" -->
+<!-- <match target="pattern">
+    <test name="family" compare="eq" target="default">
+        <string>Arial</string>
+    </test>
+    <test compare="more" name="weight" >
+        <const>bold</const>
+    </test>
+    <edit name="family" mode="prepend" binding="same">
+        <string>Arial Black</string>
+    </edit>
+    <edit name="weight" mode="assign">
+        <const>bold</const>
+    </edit>
+</match> -->
+
+
+<!-- Replace "Lucida Sans Unicode" bold with Lucida Grande bold weight -->
+<match target="pattern">
+    <test name="family" compare="eq" target="default">
+        <string>Lucida Sans Unicode</string>
+    </test>
+    <test compare="more" name="weight" >
+        <const>medium</const>
+    </test>
+    <edit name="family" mode="prepend" binding="same">
+        <string>Lucida Grande</string>
+    </edit>
+    <edit name="weight" mode="assign">
+        <const>bold</const>
+    </edit>
+</match>	
+<!--}}}-->
+
+<!-- ********************  EXPERIMENTAL  **********************  -->
+
+
+<match target="font" >
   <edit mode="assign" name="rgba" >
    <const>rgb</const>
   </edit>
- </match>
-   <match target="font" >
   <edit mode="assign" name="hinting" >
-   <bool>none</bool>
+   <bool>false</bool>
   </edit>
- </match>
- <!--  <match target="font" >
   <edit mode="assign" name="hintstyle" >
    <const>hintmedium</const>
   </edit> 
- </match>-->
- <match target="font" >
   <edit mode="assign" name="antialias" >
    <bool>true</bool>
   </edit>
- </match>
- <match target="pattern" >
-	<edit mode="assign" name="autohint">
+   <edit mode="assign" name="autohint">
 	 <bool>false</bool>
-	</edit>
- </match>
- <match target="font">
+   </edit>
+   <edit name="lcdfilter" mode="assign">
+       <const>lcddefault</const>
+   </edit>
+</match>
+
+<match target="font">
 	 <test name="weight" compare="more">
 		 <const>medium</const>
      </test>
@@ -33,17 +385,14 @@
 		 <bool>false</bool>
 	 </edit>
  </match>
- <match target="pattern" name="family" >
-		<test name="family" qual="any" >
-			 <string>Helvetica</string>
-			</test>
-		<edit mode="assign" name="family" >
-		 <string>sans-serif</string>
-	</edit>
- </match>
+
  <match target="pattern">
 	 <edit name="dpi" mode="assign">
 		 <double>101</double></edit>
  </match> 
+
+<rescan>
+    <int>30</int>
+</rescan>
  <dir>~/.fonts</dir>
 </fontconfig>
