--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,9 @@ set -g visual-activity on
 set -g default-terminal screen-256color
 set -g mouse-select-pane on
 unbind home
-set -g prefix C-a,home
-bind C-a send-prefix
+#set -g prefix C-a,home,`
+set -g prefix `,C-a
+bind -n ` send-prefix
 #set -g set-remain-on-exit on
 set -g visual-bell off
 setw -g xterm-keys on
@@ -52,6 +53,9 @@ set -g set-titles on
 set -g set-titles-string "#T"
 # Status Bar
 set -g status-bg default
+set -g message-bg default
+set -g message-fg green
+#set -g window-status-alert-bg default
 set -g status-fg white
 set -g status-justify centre
 set -g status-interval 20
