--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -2,10 +2,15 @@
 
 loadplugins
 command! -nargs=* ir open read
+"command! -complete=buffer ntab bnext <count><CR>
+"command! -count ntab bnext <count><CR>
 
+"nmap <Esc> :bnext <count><CR>
 nnoremap <A-Right> gt
 nnoremap <A-Left> gT
-nnoremap gt :tabopen! 
+nnoremap <Esc> gt
+nnoremap l :tabopen! 
+nmap H F18
 nnoremap F f
 nnoremap f F
 nnoremap S <C-c>
@@ -23,6 +28,7 @@ nnoremap ` :bnext<Space>
 nnoremap <BS> <C-o>
 nnoremap `0 g0
 nnoremap `l g$
+
 set defsearch=g
 set editor="xterm -e /usr/bin/vim -f"
 set mainecoon=am
@@ -31,7 +37,7 @@ set runtimepath=/home/raghavendra/.vimperator
 
 hi CmdLine font-family: "Lucida Console"; font-size: 10pt; font-weight: normal;
 "set complete=sl
-set guioptions=rb
+set guioptions=n
 command! good noscript toggleperm
 command! tgood noscript toggletemp
 
@@ -53,6 +59,16 @@ javascript <<EOF
 })();
 EOF
 
+:bmark http://www.google.com/search?btnI=I%27m+Feeling+Lucky&q=%s -title="Google feeling lucky search" -keyword=googlelucky
+":set defsearch=googlelucky
+"nnoremap 
+nnoremap h :tabopen googlelucky 
 "bma -k=r http://reddit.com/r/%s/
 " vim: set ft=vimperator:
 colorscheme myzenburn
+
+"http://code.google.com/p/vimperator-labs/issues/detail?id=221
+nnoremap <silent> n n:centerselect<CR>
+nnoremap <silent> N N:centerselect<CR>
+nnoremap <silent> zz :centerselect<CR>
+
