--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,4 +1,4 @@
-Config { font = "xft:Consolas-10"
+Config { font = "xft:Dina-9"
        , bgColor = "#1A1A1A"
        , fgColor = "#0000FF"
        , position = Top
