--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,4 @@
 set -g default-command /bin/zsh
-#setw -g aggressive-resize on
 setw -g utf8 on
 set -g bell-action any
 set -g visual-content on
@@ -7,11 +6,9 @@ set -g visual-activity on
 set -g default-terminal screen-256color
 set -g mouse-select-pane on
 unbind home
-#set -g prefix C-a,home,`
 set -g prefix `,C-a
-bind -n ` send-prefix
-#set -g set-remain-on-exit on
-set -g visual-bell off
+bind ` send-prefix
+set -g visual-bell on
 setw -g xterm-keys on
 
 unbind C-b
@@ -19,19 +16,13 @@ unbind C-b
 unbind C-a
 bind c new-window -a
 
-# Last active window
 unbind l
 bind C-a last-window
-
-# Use Vi mode
 setw -g mode-keys vi
 set-option -g status-keys vi
 
-# Make mouse useful in copy mode
-#set -g mouse-select-pane on 
 setw -g mode-mouse on
 
-# More straight forward key bindings for splitting
 unbind %
 bind | split-window -h
 bind h split-window -h
@@ -39,19 +30,11 @@ unbind '"'
 bind - split-window -v
 bind v split-window -v
 
-# History
 set -g history-limit 8000
 
-# Pane
 unbind o
-#bind C-s down-pane
-#set -g status-interval 2 
-# Terminal emulator window title
 set -g set-titles on
-#set -g set-titles-string "#S:#I:#P:#(cat /proc/$$/cmdline | tr '\0' ' ')"
-#set -g set-titles-string "#S:#I:#P:#W:#T"
 set -g set-titles-string "#T"
-# Status Bar
 set -g status-bg default
 set -g message-bg default
 set -g message-fg green
@@ -62,32 +45,21 @@ set -g status-interval 20
 set -g status-left '#[fg=green]#H#[default]'
 set -g status-right  '#[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
 
-# Notifying if other windows has activities
-# Experimental
+setw -g window-status-fg colour244
 #setw -g monitor-activity on
 
-# Highlighting the active window in status bar
-#setw -g window-status-current-bg grey
-#setw -g window-status-current-fg black
+setw -g window-status-current-bg default
+setw -g window-status-current-fg colour44
 
 # Clock
 setw -g clock-mode-colour green
 setw -g clock-mode-style 24
-
-#set mouse=a
-#set ttymouse=xterm2
-#mode-mouse on
 unbind x
 bind-key x kill-pane
-
-bind '`' split-window "exec htop"
-
-# confirm before killing a window or the server
 bind-key k confirm kill-window
 bind-key K confirm kill-server
 set-window-option -g automatic-rename on
 
-# open a man page in new window
 bind / command-prompt "split-window 'exec man %%'"
 
 unbind Up
@@ -106,30 +78,21 @@ unbind F12
 bind-key -n F9 select-pane -t:.+
 bind-key -n F10 select-pane -t:.-
 bind-key -n F11 prev
+#bind-key -n F11 previous-window -a
 bind-key -n F12 next
 
 set -g base-index 1
-
-# session initialization
-#new -s term
-#neww -t 2
-#neww -d -t 3
-
-new -s uake
-neww -t 2
-neww -d
-neww -d
-neww -d
-neww -d
+if-shell '[[ ! tmux ls | grep -q  uake ]]' 'new -s uake \; neww -t 2 \; neww -d \; neww -d \; neww -d \; neww -d'
 
 unbind [
 bind-key [ copy-mode -u
 
-bind > send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
-#unbind >
-#bind -t vi-copy > send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
-#bind -t vi-copy '>' send-keys 'Enter' \; run-shell 'tmux paste-buffer | xsel -i' 
-#bind -t vi-copy -n Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+unbind -t vi-copy Enter
+unbind >
+bind -t vi-copy > copy-selection 
+
+bind Enter send-keys '>' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+#bind Enter send-keys '>' \; run-shell 'tmux save-buffer | xclip -i' 
 
 unbind ]
 bind-key ] paste-buffer
@@ -142,9 +105,8 @@ bind-key -t vi-edit C-k delete-line
 bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
 set -g display-time 2000
 
-#unbind r
-#bind-key r rename-window
 set -g lock-server off 
 set -g lock-command /usr/bin/vlock
-#set -g lock-after-time 1800
 
+unbind s
+bind s set status 
