--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -1,11 +1,17 @@
 "~/bin/mmove"
    Control + Shift + s
 
+"dmenuclip"
+    alt + Insert
+
 #"~/bin/noter"
 #   alt + Pause
 
 "shellrun xpaste"
    alt + Pause
+
+"mpc next"
+    alt + Scroll_Lock
 
 "~/bin/toggle"
  alt + F11
@@ -56,11 +62,11 @@
 "~/bin/toggle"
    release + alt + b:1
 
-#"~/bin/brightness.sh 1"
-#   release + Control + b:1
+"~/bin/brightness.sh 1"
+   release + Control + b:1
 
-#"~/bin/brightness.sh 2"
-#   release + Control + b:3
+"~/bin/brightness.sh 2"
+   release + Control + b:3
 
 "~/bin/volchange 1"
    release + Mod4 + b:1
