--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 set -g default-command /bin/zsh
 setw -g utf8 on
 set -g bell-action any
-set -g visual-content on
-set -g visual-activity on
+#set -g visual-content on
+#set -g visual-activity on
 set -g default-terminal screen-256color
 set -g mouse-select-pane on
 unbind home
@@ -82,17 +82,21 @@ bind-key -n F11 prev
 bind-key -n F12 next
 
 set -g base-index 1
-if-shell '[[ ! tmux ls | grep -q  uake ]]' 'new -s uake \; neww -t 2 \; neww -d \; neww -d \; neww -d \; neww -d'
+#if-shell '[[ ! tmux ls | grep -q  uake ]]' 'new -s uake \; neww -t 2 \; neww -d \; neww -d \; neww -d \; neww -d'
+if-shell '/bin/true' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
+#if-shell '[[ ! tmux ls | grep -q  test ]]' 'new -s test ; neww -t 2 ; neww -d ; neww -d ; neww -d ; neww -d'
+
+
 
 unbind [
 bind-key [ copy-mode -u
 
 unbind -t vi-copy Enter
-unbind >
-bind -t vi-copy > copy-selection 
+unbind .
+bind -t vi-copy . copy-selection 
 
-bind Enter send-keys '>' \; save-buffer /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange' 
-#bind Enter send-keys '>' \; run-shell 'tmux save-buffer | xclip -i' 
+bind Enter send-keys '.' \; save-buffer /tmp/.tmux-exchange; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+#bind Enter send-keys '.' \; run-shell 'tmux save-buffer | xclip -i' 
 
 unbind ]
 bind-key ] paste-buffer
@@ -110,3 +114,10 @@ set -g lock-command /usr/bin/vlock
 
 unbind s
 bind s set status 
+
+bind r command-prompt -p "Jump to:"  'find-window %%'
+
+#set -s quiet on
+
+# mine 
+#set -g bell-all on
