--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,7 +117,7 @@ bind s set status
 
 bind r command-prompt -p "Jump to:"  'find-window %%'
 
-#set -s quiet on
+set -s quiet on
 
 # mine 
 #set -g bell-all on
