--- a/aria2.conf
+++ b/aria2.conf
@@ -1,4 +1,7 @@
 # http://sourceforge.net/apps/trac/aria2/wiki/UsageExample#BitTorrentDownload
+dir=$HOME/Downloads
+daemon=true
+enable-xml-rpc=true
 listen-port=60000
 enable-dht=true
 bt-require-crypto=true
@@ -7,7 +10,9 @@ seed-ratio=1.0
 max-upload-limit=10K
 ftp-pasv=true
 file-allocation=falloc
-direct-io=true
+enable-direct-io=true
 disable-ipv6=true
 on-download-complete=/home/raghavendra/bin/notify-send-aria2
 summary-interval=300
+user-agent=Mozilla/5.0 (X11; Linux x86_64; rv:2.0b6) Gecko/20100101 Firefox/4.0b6
+load-cookies=/home/raghavendra/.mozilla/firefox/kjiks0hm.raghu/cookies.sqlite
