--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ unbind o
 set -g set-titles on
 set -g set-titles-string "#T"
 set -g status-bg default
-set -g message-bg default
+set -g message-bg color235 
 set -g message-fg green
 #set -g window-status-alert-bg default
 set -g status-fg white
@@ -75,28 +75,37 @@ unbind F9
 unbind F10
 unbind F11 
 unbind F12
-bind-key -n F9 select-pane -t:.+
-bind-key -n F10 select-pane -t:.-
+bind-key -r F9 select-pane -t:.+
+bind-key -r F10 select-pane -t:.-
 bind-key -n F11 prev
 #bind-key -n F11 previous-window -a
 bind-key -n F12 next
 
 set -g base-index 1
-#if-shell '[[ ! tmux ls | grep -q  uake ]]' 'new -s uake \; neww -t 2 \; neww -d \; neww -d \; neww -d \; neww -d'
-if-shell '/bin/true' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
+if-shell '[[ ! tmux ls | grep -q  uake ]]' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
+#if-shell '/bin/true' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
 #if-shell '[[ ! tmux ls | grep -q  test ]]' 'new -s test ; neww -t 2 ; neww -d ; neww -d ; neww -d ; neww -d'
 
 
 
 unbind [
-bind-key [ copy-mode -u
+bind-key [ copy-mode\; send-keys '0'
 
-unbind -t vi-copy Enter
-unbind .
-bind -t vi-copy . copy-selection 
+unbind -t vi-copy Tab
+bind -t vi-copy Tab begin-selection
+#unbind -t vi-copy Enter
+#unbind .
+#bind -t vi-copy . copy-selection 
 
-bind Enter send-keys '.' \; save-buffer /tmp/.tmux-exchange; run-shell 'xsel -i < /tmp/.tmux-exchange' 
+bind Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'xclip -i < /tmp/.tmux-exchange'\; display-message "Copied to clipboard"
+bind p     send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'gist < /tmp/.tmux-exchange 2>/dev/null | xclip -i'\; display-message "Pasted to gist"
+#bind p     send-keys 'Enter' \; run-shell 'tmux save-buffer | gist 2>/dev/null | xclip -i' \; display-message "Pasted"
 #bind Enter send-keys '.' \; run-shell 'tmux save-buffer | xclip -i' 
+
+#unbind -t vi-copy Space
+#bind -t vi-copy Space copy-mode\; send-keys 'M'\; send-keys '$'\; send-keys 'Space'
+#bind -t vi-copy Space send-keys 'Tab'
+
 
 unbind ]
 bind-key ] paste-buffer
@@ -107,7 +116,7 @@ bind-key -t vi-edit C-k delete-line
 
 #bind-key -t vi-edit BS delete-word
 bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
-set -g display-time 2000
+set -g display-time 5000
 
 set -g lock-server off 
 set -g lock-command /usr/bin/vlock
@@ -120,4 +129,7 @@ bind r command-prompt -p "Jump to:"  'find-window %%'
 set -s quiet on
 
 # mine 
-#set -g bell-all on
+set -g bell-all on
+
+bind o run tmux-url 
+
