--- a/aria2.conf
+++ b/aria2.conf
@@ -15,4 +15,4 @@ disable-ipv6=true
 on-download-complete=/home/raghavendra/bin/notify-send-aria2
 summary-interval=300
 user-agent=Mozilla/5.0 (X11; Linux x86_64; rv:2.0b6) Gecko/20100101 Firefox/4.0b6
-load-cookies=/home/raghavendra/.mozilla/firefox/kjiks0hm.raghu/cookies.sqlite
+#load-cookies=/home/raghavendra/.mozilla/firefox/kjiks0hm.raghu/cookies.sqlite
