--- a/.mplayer/config
+++ b/.mplayer/config
@@ -2,23 +2,44 @@
 [default]
 ao=oss
 #vo=gl
-vo=gl:yuv=1:rectangle=2:force-pbo,xv,fbdev,null
+#vo=gl:yuv=1:rectangle=2:force-pbo,xvmc,xv,fbdev,null
+vo=xv
 ontop=yes
+monitoraspect=16:10
 slices=no
 idx=yes
 stop-xscreensaver=yes
-framedrop="1"
+framedrop=1
 nomouseinput=yes
-hardframedrop="0"
+hardframedrop=0
 channels=2
+#af="volnorm=1,scaletempo,equalizer=0:0:0:0:0:0:0:0:0:0"
+af="volnorm=1"
 lirc="no"
 joystick="no"
 softvol=yes
 softvol-max=200
 volume=100
+autoq=100
+#mc=0.001
+#http://martin.ankerl.com/2006/06/10/pimp-my-mplayer/
+subfont-text-scale=3
+fontconfig=no
+#fstype=fullscreen
+
+[nouveau]
+vo=xv
+
+[high]
+# run with -profile=default,high
+lavdopts="threads=8"
+vfm=ffmpeg
+vc=ffh264
+#hardframedrop="0"
 
 [plugin]
 autosync=0
 mc=0
 correct-pts=yes
 nomouseinput=no
+#http://ubuntuforums.org/archive/index.php/t-1154431.html
