--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ unbind o
 set -g set-titles on
 set -g set-titles-string "#T"
 set -g status-bg default
-set -g message-bg color235 
+set -g message-bg colour235 
 set -g message-fg green
 #set -g window-status-alert-bg default
 set -g status-fg white
@@ -82,7 +82,7 @@ bind-key -n F11 prev
 bind-key -n F12 next
 
 set -g base-index 1
-if-shell '[[ ! tmux ls | grep -q  uake ]]' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
+if-shell '! tmux ls | grep -q  uake' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
 #if-shell '/bin/true' 'new -s uake; neww -t 2; neww -d; neww -d; neww -d; neww -d'
 #if-shell '[[ ! tmux ls | grep -q  test ]]' 'new -s test ; neww -t 2 ; neww -d ; neww -d ; neww -d ; neww -d'
 
@@ -98,7 +98,7 @@ bind -t vi-copy Tab begin-selection
 #bind -t vi-copy . copy-selection 
 
 bind Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'xclip -i < /tmp/.tmux-exchange'\; display-message "Copied to clipboard"
-bind p     send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'gist < /tmp/.tmux-exchange 2>/dev/null | xclip -i'\; display-message "Pasted to gist"
+bind p     send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'gist < /tmp/.tmux-exchange 2>/dev/null'\; display-message "Pasted to gist"
 #bind p     send-keys 'Enter' \; run-shell 'tmux save-buffer | gist 2>/dev/null | xclip -i' \; display-message "Pasted"
 #bind Enter send-keys '.' \; run-shell 'tmux save-buffer | xclip -i' 
 
@@ -113,6 +113,8 @@ bind-key ] paste-buffer
 bind-key -t vi-edit Up history-up
 bind-key -t vi-edit Down history-down
 bind-key -t vi-edit C-k delete-line
+bind-key -t vi-copy Right e
+bind-key -t vi-copy Left b
 
 #bind-key -t vi-edit BS delete-word
 bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
