--- a/.weechat/alias.conf
+++ b/.weechat/alias.conf
@@ -33,5 +33,7 @@ WC = "window merge"
 WI = "whois"
 WII = "whois $1 $1"
 WW = "whowas"
+yahoo = "/msg &bitlbee account yahoo on"
+yqry = "/msg &bitlbee add -tmp yahoo $1; /query $1 $2-"
 
 [completion]
