--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g bell-action any
 #set -g visual-content on
 #set -g visual-activity on
 set -g default-terminal screen-256color
-set -g mouse-select-pane on
+set -g mouse-select-pane off
 unbind home
 set -g prefix `,C-a
 bind ` send-prefix
@@ -12,6 +12,9 @@ set -g visual-bell on
 setw -g xterm-keys on
 
 unbind C-b
+
+setw -g mode-bg colour36
+setw -g mode-fg colour246
 
 unbind C-a
 bind c new-window -a
@@ -91,11 +94,11 @@ if-shell '! tmux ls | grep -q  uake' 'new -s uake; neww -t 2; neww -d; neww -d; 
 unbind [
 bind-key [ copy-mode\; send-keys '0'
 
-unbind -t vi-copy Tab
-bind -t vi-copy Tab begin-selection
-#unbind -t vi-copy Enter
-#unbind .
-#bind -t vi-copy . copy-selection 
+#unbind -t vi-copy Tab
+#bind -t vi-choice Tab choose\; begin-selection\; next-word
+
+unbind /
+bind / copy-mode\; send-keys '?'
 
 bind Enter send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'xclip -i < /tmp/.tmux-exchange'\; display-message "Copied to clipboard"
 bind p     send-keys 'Enter' \; save-buffer /tmp/.tmux-exchange\; run-shell 'gist < /tmp/.tmux-exchange 2>/dev/null'\; display-message "Pasted to gist"
@@ -113,8 +116,8 @@ bind-key ] paste-buffer
 bind-key -t vi-edit Up history-up
 bind-key -t vi-edit Down history-down
 bind-key -t vi-edit C-k delete-line
-bind-key -t vi-copy Right e
-bind-key -t vi-copy Left b
+bind-key -t vi-copy Right next-word-end #fix this
+bind-key -t vi-copy Left previous-word
 
 #bind-key -t vi-edit BS delete-word
 bind-key C-p pipe-pane -o 'cat >>/tmp/output.#S.#I-#P'
