--- a/makepkg.conf
+++ b/makepkg.conf
@@ -1,5 +1,5 @@
-DLAGENTS=( 'http::/usr/bin/aria2c -m 3 --file-allocation=none -o $(basename %o) %u'
-           'ftp::/usr/bin/aria2c -m 3 --file-allocation=none -o $(basename %o) %u'
+DLAGENTS=( 'http::/usr/bin/aria2c --conf-path=/home/raghavendra/config/aria2.conf -m 3 --file-allocation=none -o $(basename %o) %u'
+           'ftp::/usr/bin/aria2c --conf-path=/home/raghavendra/config/aria2.conf -m 3 --file-allocation=none -o $(basename %o) %u'
            'ftp::/usr/bin/wget -c --passive-ftp -t 3 --waitretry=3 -O %o %u'
            'http::/usr/bin/wget -c -t 3 --waitretry=3 -O %o %u'
            'https::/usr/bin/wget -c -t 3 --waitretry=3 --no-check-certificate -O %o %u'
@@ -9,12 +9,11 @@ DLAGENTS=( 'http::/usr/bin/aria2c -m 3 --file-allocation=none -o $(basename %o) 
 CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"        #unknown to pc
 
-CFLAGS="-march=native -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
+#CFLAGS="-march=native -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
 #CFLAGS="-march=native -O2 -pipe -ffast-math -ftracer -funswitch-loops" 
+CFLAGS="-march=native -O2 -pipe"
 
 CXXFLAGS=${CFLAGS}
-#CXXFLAGS="-march=native -O2  -pipe -ffast-math -ftracer -funswitch-loops"
-#CXXFLAGS="-march=native -O2 -flto  -pipe -ffast-math -ftracer -funswitch-loops -fexcess-precision=fast"
 
 MAKEFLAGS="-j3"        
 # change commented to j3
