--- a/makepkg.conf
+++ b/makepkg.conf
@@ -12,8 +12,8 @@ CHOST="x86_64-pc-linux-gnu"        #unknown to pc
 #CFLAGS="-march=native -O2 -flto -pipe -ffast-math -ftracer  -funswitch-loops -fexcess-precision=fast" 
 #CFLAGS="-march=native -O2 -pipe -ffast-math -ftracer -funswitch-loops" 
 CFLAGS="-march=native -O2 -pipe"
+CXXFLAGS="-march=native -O2 -pipe"
 
-CXXFLAGS=${CFLAGS}
 
 MAKEFLAGS="-j3"        
 # change commented to j3
